--- a/_posts/2018-03-29-EXT4文件系统下的文件查找和删除.md
+++ b/_posts/2018-03-29-EXT4文件系统下的文件查找和删除.md
@@ -97,10 +97,9 @@ _Starting in ext4, there is a new feature called flexible block groups (flex_bg)
 
 一个descriptor的主要结构如下(点击查看完整表项)：
 <a href="https://ext4.wiki.kernel.org/index.php/Ext4_Disk_Layout#Block_Group_Descriptors" target="view_window">
-![Descriptor layout]({{site.resource}}{{page.longtitle}}/4.png)
+![Descriptor layout]({{site.resource}}{{page.longtitle}}/4.png)</a>
 
 <center><font size="2" color="#595959">Descriptor layout</font></center>
-</a>
 
 根据以上信息，在group descriptor的0x8偏移找到inode table在group内的块偏移量为0x0421，由于一个块的大小为0x1000，则goup0的inode table的实际地址为：<font color="red">0x421000</font>
 
@@ -155,7 +154,7 @@ i_block是inode中存储树形结构或目的块组.
 
 由0xf30a这个magic number可知，该文件系统使用了extent tree的结构.这种结构是ext2/3和ext4之间的最大不同.extent tree大小为28byte，其结构如下，三个表分别是ext4_extent_header(12byte)，ext4_extent_idx(12byte)，ext4_extent(12byte)：
 
-![ext4 extend tree]]({{site.resource}}{{page.longtitle}}/9.png)
+![ext4 extend tree]({{site.resource}}{{page.longtitle}}/9.png)
 
 <center><font size="2" color="#595959">ext4 extend tree</font></center>
 
